Fixed spacing

--- a/flight-search/src/App.css
+++ b/flight-search/src/App.css
@@ -2,5 +2,4 @@
   width: 100%;
   text-align: center;
   padding: 10px;
-  background-color: wheat;
 }
